// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList renders default message about empty movie list 1`] = `
<div
  className="movie-list"
>
  <div
    className="container"
  >
    <div
      className="message"
    >
      No films found
    </div>
  </div>
</div>
`;

exports[`MovieList renders message from props about empty movie list 1`] = `
<div
  className="movie-list"
>
  <div
    className="container"
  >
    <div
      className="message"
    >
      test message
    </div>
  </div>
</div>
`;

exports[`MovieList renders movie list 1`] = `
<div
  className="movie-list"
>
  <div
    className="container"
  >
    <MovieBox
      movie={
        Object {
          "id": "1",
        }
      }
    />
    <MovieBox
      movie={
        Object {
          "id": "2",
        }
      }
    />
  </div>
</div>
`;
